--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "1.1.4",
     "react-thunk": "^1.0.0",
     "react-toast-mobile": "^1.0.10",
+    "react-transition-group": "^2.4.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
