--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "New-wechat",
   "version": "0.1.0",
-  "proxy": "http://localhost:8541/h1/v7.3",
+  "proxy": "http://fixer.handlebarlabs.com/",
   "private": true,
   "homepage": "",
   "combintionJs": [
