--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "currency-couneter-web",
+  "name": "currency-convert-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
-  "combintionJs": [
-    "MemberCenter"
-  ],
   "dependencies": {
     "antd": "^3.5.3",
     "axios": "^0.18.0",
